2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/admin_gtk.py (added):
	* flumotion/component/encoders/flv/flv_wizard.py (deleted):
	  Rename.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Bump to 0.5.0.1

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/vp6/Makefile.am:
	* flumotion/component/encoders/vp6/wizard_gtk.py (added):
	* flumotion/component/encoders/vp6/admin_gtk.py (deleted):
	* flumotion/component/encoders/vp6/flv_wizard.py (deleted):
	  Further moving and fixing, pass distcheck again.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/vp6.py (deleted):
	* flumotion/component/encoders/flv/vp6_wizard.py (deleted):
	* flumotion/component/encoders/flv/vp6-wizard.glade (deleted):
	  Further splitting/cutting/renaming

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/vp6/vp6.xml:
	* flumotion/component/encoders/vp6/admin_gtk.py (added):
	* flumotion/component/encoders/vp6/vp6.xml (added):
	* flumotion/component/encoders/vp6/vp6_wizard.py (deleted):
	* flumotion/component/encoders/vp6/flv.xml (deleted):
	  Further splitting/cutting/renaming

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/vp6/Makefile.am:
	* flumotion/component/encoders/vp6 (added):
	  First pass at splitting off vp6 from flv dir.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/Makefile.am:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/mp3/Makefile.am:
	* flumotion/component/encoders/mp3/mp3.xml:
	* flumotion/component/encoders/mp3/wizard_gtk.py (added):