@@ -2,7 +2,8 @@
 
   <components>
     <component type="mp3-encoder"
-               base="flumotion/component/encoders/mp3">
+               base="flumotion/component/encoders/mp3"
+               _description="Encodes raw audio to MP3">
       <source location="flumotion.component.encoders.mp3.mp3" />
 
       <eater name="default" />
@@ -22,8 +23,9 @@
 
       <properties>
         <property name="bitrate" type="int"
-                  description="Bitrate to encode at (in bps)" />
-        <property name="rate" type="int" />
+                  _description="Bitrate to encode at (in bps)" />
+        <property name="samplerate" type="int"
+                  _description="Samplerate to encode at (in Hz; defaults to 44100 Hz)" />
       </properties>
 
     </component>
